--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,10 +637,13 @@ p.has-drop-cap:not(:focus):first-letter {
 
 }
 .col-lg-4:nth-child(3n+1) .square {
-  background-color: #FFF6E9; 
+  background-color: #425669; 
 }
 .col-lg-4:nth-child(3n) .square {
-  background-color: #FFF6E9; 
+  background-color: #9A6D5A; 
+}
+.col-lg-4:nth-child(3n+2) .square {
+  background-color: #58758B; 
 }
 .square p {
   margin: 0;
@@ -649,7 +652,7 @@ p.has-drop-cap:not(:focus):first-letter {
 .text-lg {
   font-family: 'Melodrama', sans-serif;
   font-weight: 500;
-  color: #2C2E3F;
+  color: #F4F4F4;
   font-size: 40px;
 }
 .contact-info {
@@ -675,6 +678,8 @@ p.has-drop-cap:not(:focus):first-letter {
 
 .text-sm {
   font-size: 15px;
+  color: #F4F4F4;
+
   font-family: 'Nunito', sans-serif;
   font-weight: 400; 
   margin-top: 10px;
